Sample app from here: https://docs.microsoft.com/en-us/aspnet/core/data/ef-rp/intro?view=aspnetcore-2.1&tabs=visual-studio

--- a/ContosoUniversity/appsettings.json
+++ b/ContosoUniversity/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SchoolContext": "Server=(localdb)\\mssqllocaldb;Database=SchoolContext-38edf492-5a74-4575-b0b2-9bd0c13d5ae8;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
